fix path on configparser

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,4 @@
 [inv03]
-databaseuri = firebird+fdb://PROGRAMER:programer@localhost:3050/c:/database/inv03/database/datainv03.fdb
+databaseuri = firebird+fdb://PROGRAMER:programer@192.168.1.101:3050/c:/database/inv03/database/datainv03.fdb
+fuck=text
 paging = 12
