--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [inv03]
+;databaseuri = firebird+fdb://PROGRAMER:programer@192.168.1.105:3050/d:/database/inv03/datainv03.fdb
 databaseuri = firebird+fdb://PROGRAMER:programer@192.168.1.101:3050/c:/database/inv03/database/datainv03.fdb
 fuck=text
 paging = 12
